Fixation de beugs sur l'importation distante